fix document with enum